--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.17.4",
+    "antd-mask-input": "^0.1.15",
     "axios": "^0.24.0",
     "node-sass": "^7.0.0",
     "ramda": "^0.27.1",
